--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "daggyd",
+    "fastapi",
+    "uvicorn[standard]",
 ]
 
 [tool.uv.sources]
